--- a/ss/20250831/css/main.css
+++ b/ss/20250831/css/main.css
@@ -4,76 +4,26 @@ html{
 	font-size:14px;
 	line-height:100%;
 	font-family:sans-serif;
+touch-action: none;
 }
 body{
 	color:#fff;
 	background-color:#333;
 	margin:0;
 	height:100%;
-	width:100%;
 
 	text-align:center;
+}
+div#aaa{
+margin:0;
+	height:480px;
+}
+canvas{
+	object-fit:contain;
+	object-position:top;
+width:100%;
+height:100%;
 }
 span.main{
 	text-align:center;
-	width:640px;
-}
-a{
-	color:white;
-}
-span.openclosebutton{
-	vertical-align:top;
-	left:2px;
-	top:2px;
-	position:fixed;
-	z-index:100;
-}
-span.openclosebutton[openclose="1"] a:after{
-	content:"close";
-}
-span.openclosebutton[openclose="0"] a:before{
-	content:"open";
-}
-
-div.menu{
-	padding-top:32px;
-	padding-left:2px;
-	width:300px;
-	background-color:rgba(0,0,0,0.5);
-	text-align:left;
-	display:inline-block;
-	height:100%;
-}
-div.openclose{
-	height:100%;
-	left:0px;
-	top:0px;
-	position:fixed;
-	transition: all 200ms 0s ease;
-	z-index:50;
-}
-div.openclose[openclose="1"]{
-	left:0%;
-}
-div.openclose[openclose="0"]{
-	left:-300px;
-}
-
-div#aaa{
-	z-index:0;
-width:100%;
-}
-div#aaa canvas{
-/*width:100%;*/
-}
-
-div#aaa[content="false"]{
-	display:none;
-
-
-}
-
-span.menucaption{
-	width:100px;
-	display:inline-block;
 }
